--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,8 @@
 {
   "version": "12.0.0",
   "npmClient": "npm",
-  "useWorkspaces": false
+  "useWorkspaces": false,
+  "packages": [
+    "/*"
+  ]
 }
