--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,5 @@
   "version": "1.0.0",
   "npmClient": "npm",
   "useWorkspaces": false,
-  "packages": [
-    "D:/husky/my-app"
-  ]
+  "packages": ["D:/husky/my-app"]
 }
