--- a/package.json
+++ b/package.json
@@ -72,8 +72,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier . --write",
-      "git add"
+      "prettier . --write"
     ],
     "src/**/*.+(js|json|ts|tsx)": [
       "eslint . --fix --max-warnings=0"
