--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
-  "version": "3.0.0",
+  "version": "3.1.0",
   "npmClient": "npm",
   "useWorkspaces": false,
-  "packages": ["D:/new-husky/react-app"]
+  "packages": [
+    "D:/new-husky/react-app"
+  ]
 }
