--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,5 @@
   "version": "3.10.0",
   "npmClient": "npm",
   "useWorkspaces": false,
-  "packages": [
-    "D:/new-husky/react-app"
-  ]
+  "packages": ["D:/new-husky/react-app"]
 }
