--- a/package.json
+++ b/package.json
@@ -72,10 +72,11 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier . --write"
+      "prettier . --write",
+      "git add"
     ],
     "src/**/*.+(js|json|ts|tsx)": [
-      "eslint --fix",
+      "eslint . --fix",
       "git add"
     ]
   },
