--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "pre-commit": "npx lint-staged",
     "lerna:version": "npx lerna version --conventional-commits --no-push --yes",
     "changeset:version": "npx changeset && npx changeset version",
-    "changeset": "changeset",
+    "changeset": "npx changeset:version",
     "commit": "cz",
     "coverage": "npm test -- --coverage --watchAll"
   },
