--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier . --write"
     ],
-    "src/**/*.(js,json,ts,tsx)": [
+    "src/**/*.(js|json|ts|tsx)": [
       "eslint . --fix --max-warnings=0"
     ]
   },
